--- a/css/main.css
+++ b/css/main.css
@@ -51,11 +51,16 @@ main {
   position: fixed;
   bottom: 120px;
   right: 20px;
-  background-color: #fe6f0f;
+  background-color: var(--button-primary);
   color: white;
   padding: 10px 15px 10px 15px;
   border-radius: 25px;
   font-size: smaller;
   box-shadow: rgba(100, 100, 111, 0.4) 0px 7px 29px 0px;
   cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.write-btn:hover {
+  background-color: var(--button-hover);
 }
